TEST_PROGRAMS/INVALID/11/test1.go
var test float = 5;
